[package]
name = "murr-server"
version = "0.1.0"
authors = ["Glowpelt <glowpelt@chakat.space>"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/MultiUserRealityRenderer/murr-server"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
