[package]
name = "murr-server"
version = "0.1.0"
authors = ["Glowpelt <glowpelt@chakat.space>"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/MultiUserRealityRenderer/murr-server"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-tungstenite = { version = "0.10", features = ["tls"] }
tungstenite = "0.10"
futures = "0.3"
log = "0.4"
env_logger = "0.7"